--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t hikaritanabe -t tanabehikari/docker-react -f Dockerfile.dev .
+  - docker build -t tanabehikari -t tanabehikari/docker-react -f Dockerfile.dev .
 
 script:
     - docker run -e CI=true tanabehikari/docker-react npm run test
